@@ -1,7 +1,9 @@
 package com.stockland.app.controller;
 
+import com.stockland.app.dto.PropertyResponseDTO;
 import com.stockland.app.model.User;
 import com.stockland.app.repository.UserRepository;
+import com.stockland.app.service.PropertyService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -9,15 +11,18 @@ import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 
-import java.util.Collections;
+import java.util.List;
 
 @Controller
 public class DashboardController {
     private final UserRepository userRepository;
+    private final PropertyService propertyService;
 
     @Autowired
-    public DashboardController(UserRepository userRepository) {
+    public DashboardController(UserRepository userRepository,
+                               PropertyService propertyService) {
         this.userRepository = userRepository;
+        this.propertyService = propertyService;
     }
 
     @GetMapping("/dashboard")
@@ -27,10 +32,9 @@ public class DashboardController {
         User user = userRepository.findByUsername(username)
                 .orElseGet(() -> userRepository.findByEmail(username).orElse(null));
         model.addAttribute("user", user);
-        // For now, add empty lists for favorites and myListings
-        model.addAttribute("favorites", Collections.emptyList());
-        model.addAttribute("myListings", Collections.emptyList());
+        List<PropertyResponseDTO> myListings = propertyService.getPropertiesByUserId(user.getId());
+        model.addAttribute("myListings", myListings);
+        model.addAttribute("favorites", List.of());
         return "dashboard";
     }
 }
-
